--- a/.github/workflows/generate-proto.yml
+++ b/.github/workflows/generate-proto.yml
@@ -33,17 +33,9 @@ jobs:
 
       - name: Auto Versioning (Tagging)
         run: |
-          CURRENT_VERSION=$(git describe --tags --abbrev=0)
+          # Try to get the latest tag, default to 0.0.0 if none exists
+          CURRENT_VERSION=$(git describe --tags --abbrev=0 || echo "v0.0.0")
           NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. -v OFS=. '{$NF++;print}')
           git tag $NEW_VERSION
           git push origin $NEW_VERSION
-
-      - name: Commit and Push Changes
-        run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git add .
-          git commit -m "Auto-generated Protobuf and version bump to $NEW_VERSION"
-          git push origin master
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        shell: bash
