--- a/.github/workflows/generate-proto.yml
+++ b/.github/workflows/generate-proto.yml
@@ -34,8 +34,20 @@ jobs:
       - name: Auto Versioning (Tagging)
         run: |
           # Try to get the latest tag, default to 0.0.0 if none exists
-          CURRENT_VERSION=$(git describe --tags --abbrev=0 || echo "v0.0.0")
-          NEW_VERSION=$(echo $CURRENT_VERSION | awk -F. -v OFS=. '{$NF++;print}')
-          git tag $NEW_VERSION
-          git push origin $NEW_VERSION
+          CURRENT_VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+
+          # Split the version into its components
+          IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
+
+          # Increment the last part (patch version)
+          VERSION_PARTS[2]=$((VERSION_PARTS[2] + 1))
+
+          # Construct the new version
+          NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+
+          # Create the new tag
+          git tag "$NEW_VERSION"
+
+          # Push the new tag to the remote
+          git push origin "$NEW_VERSION"
         shell: bash
