--- a/.github/workflows/generate-proto.yml
+++ b/.github/workflows/generate-proto.yml
@@ -33,8 +33,14 @@ jobs:
 
       - name: Auto Versioning (Tagging)
         run: |
-          # Try to get the latest tag, default to 0.0.0 if none exists
+          # Fetch all tags from the remote
+          git fetch --tags
+
+          # Try to get the latest tag, default to v0.0.0 if none exists
           CURRENT_VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+
+          # Remove the 'v' prefix from the version
+          CURRENT_VERSION=${CURRENT_VERSION#v}
 
           # Split the version into its components
           IFS='.' read -r -a VERSION_PARTS <<< "$CURRENT_VERSION"
@@ -43,7 +49,7 @@ jobs:
           VERSION_PARTS[2]=$((VERSION_PARTS[2] + 1))
 
           # Construct the new version
-          NEW_VERSION="${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+          NEW_VERSION="v${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
 
           # Create the new tag
           git tag "$NEW_VERSION"
