--- a/.github/workflows/generate-proto.yml
+++ b/.github/workflows/generate-proto.yml
@@ -51,9 +51,18 @@ jobs:
           # Construct the new version
           NEW_VERSION="v${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
 
+          # Check if the tag already exists and increment until a non-existing tag is found
+          while git rev-parse "$NEW_VERSION" >/dev/null 2>&1; do
+              VERSION_PARTS[2]=$((VERSION_PARTS[2] + 1))
+              NEW_VERSION="v${VERSION_PARTS[0]}.${VERSION_PARTS[1]}.${VERSION_PARTS[2]}"
+          done
+
           # Create the new tag
           git tag "$NEW_VERSION"
 
           # Push the new tag to the remote
           git push origin "$NEW_VERSION"
+
+          echo "New tag created: $NEW_VERSION"
+
         shell: bash
