Comment out the Makefile step in the generate-proto workflow

--- a/.github/workflows/generate-proto.yml
+++ b/.github/workflows/generate-proto.yml
@@ -27,9 +27,9 @@ jobs:
           go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28
           go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2
 
-      - name: Run Makefile to Generate Protobuf
-        run: |
-          make all
+      # - name: Run Makefile to Generate Protobuf
+      #   run: |
+      #     make all
 
       - name: Auto Versioning (Tagging)
         run: |
